# rust-api-iron

./: Cargo.toml  README.md  db.sql
public/: .gitignore  config.rb  index.html
public/css/: style.css
public/font/: coalition_v2.-webfont.eot  ethnocentric_rg-webfont.eot
public/js/: connexion.js  cristal.js  jquery.js  metal.js  minion.js  recup_file.js  script.js  test.js  usine.js
public/scss/: style.scss
src/: droids.rs  factories.rs  lib.rs  main.rs  users.rs  utils.rs
src/API/controllers/: health_test.rs
src/API/routes/: index.rs
