[package]
name = "project"
version = "0.1.0"
authors = ["Steven BOEHM <boehm_s@etna-alternance.net>"]

[dependencies]
staticfile = "*"
mount = "*"
router = "*"
env_logger = "*"
clap="*"
openssl="0.7.14"
openssl-sys="0.7.17"

hyper="*"

[features]
default = []
ssl = ["hyper/ssl"]

[dependencies.ws]
version="*"
features=["ssl"]

[dependencies.iron]
version="*"
features=["ssl"]
