[package]
name = "project"
version = "0.1.0"
authors = ["Steven BOEHM <boehm_s@etna-alternance.net>"]

[dependencies]
staticfile = "*"
mount = "*"
router = "*"
env_logger = "*"
ws = "*"
hyper= "*"
bodyparser = "*"
postgres = "*"
serde_json = "*"
pwhash = "*"
r2d2_postgres = "*"

[features]
default = []
ssl = ["hyper/ssl"]


# [dependencies.ws]
# version="*"
# features=["ssl"]

[dependencies.iron-postgres-middleware]
git = "https://github.com/martinsp/iron-postgres-middleware.git"


[dependencies.iron]
version="*"
features=["ssl"]
